fix(styling): Allow for spacing between paragraphs of non-stack text

--- a/packages/documentation-framework/templates/mdx.css
+++ b/packages/documentation-framework/templates/mdx.css
@@ -1,4 +1,4 @@
-p.pf-v6-c-content--p.ws-p {
+.pf-v6-l-stack > p.pf-v6-c-content--p.ws-p {
   margin: 0;
 }
 
